Bugfix in the CI config

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,14 +1,14 @@
-image: python:3.8
+image: ruby:latest
 
 before_script:
-  - pip install jupyter jupyterlab
-  - echo $PATH
-  - which jupyter
+  - apt-get update -qq && apt-get install -y build-essential libpq-dev nodejs
+  - gem install bundler
+  - bundle install
+  - apt-get install -y python3-pip
+  - pip3 install jupyter jupyterlab
 
 pages:
   script:
-    - jupyter nbconvert --to markdown assets/jupyter/blog.ipynb
-    - bundle install
     - bundle exec jekyll build -d public
   artifacts:
     paths:
