--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,11 +5,13 @@ cache:
     - vendor/ruby
 
 before_script:
-  - apt-get update -qq && apt-get install -y build-essential libpq-dev nodejs
-  - apt-get install -y bundler
+  - apt-get update -qq && apt-get install -y build-essential libpq-dev nodejs python3 python3-venv
+  - gem install bundler
   - bundle install
-  - apt-get install -y jupyter-core jupyter-notebook jupyterlab
-
+  - python3 -m venv venv
+  - source venv/bin/activate
+  - pip install jupyter jupyterlab
+  
 pages:
   script:
     - bundle exec jekyll build -d public
