--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,17 +1,5 @@
-image: ruby:latest
+image: amirpourmand/al-folio:latest
 
-cache:
-  paths:
-    - vendor/ruby
-
-before_script:
-  - apt-get update -qq && apt-get install -y build-essential libpq-dev nodejs python3 python3-venv
-  - gem install bundler
-  - bundle install
-  - python3 -m venv venv
-  - source venv/bin/activate
-  - pip install jupyter jupyterlab
-  
 pages:
   script:
     - bundle exec jekyll build -d public
