--- a/_config.yml
+++ b/_config.yml
@@ -262,9 +262,9 @@ plugins:
 # Sitemap settings
 defaults:
   - scope:
-      path: "assets"
+      path: "sitemap"
     values:
-      sitemap: false
+      sitemap: true
 
 sass:
   style: compressed
@@ -410,7 +410,7 @@ lazy_loading_images: true # enables lazy loading of images (recommended)
 
 enable_google_analytics: true # enables google analytics
 enable_cronitor_analytics: false # enables cronitor RUM analytics
-enable_google_verification: true # enables google site verification
+enable_google_verification: false # enables google site verification
 enable_bing_verification: false # enables bing site verification
 enable_masonry: true # enables automatic project cards arrangement
 enable_math: true # enables math typesetting (uses MathJax)
