Fix bug on  compression to CI/CD pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,7 +52,7 @@ compress:
 pages:
   stage: deploy
   script:
-    - mv public/ ./public
+    - echo "Deploying public directory..."
   artifacts:
     paths:
       - public
