--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ work_url: # work page URL
 x_username: yosephberhanu# your X handle
 youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 zotero_username: # your zotero username
-
+zoom_link: https://virginiatech.zoom.us/my/yosephberhanu # your zoom id
 contact_note: 
 
 # -----------------------------------------------------------------------------
