--- a/_config.yml
+++ b/_config.yml
@@ -129,9 +129,9 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: Thoughts  # blog_name will be displayed in your blog page
-blog_description: My random thoughts and notes 
-permalink: /blog/:year/:title/
+# blog_name: Thoughts  # blog_name will be displayed in your blog page
+# blog_description: My random thoughts and notes 
+# permalink: /blog/:year/:title/
 lsi: false # produce an index for related posts
 
 # Pagination
@@ -195,7 +195,7 @@ announcements:
   limit: 5 # leave blank to include all the news in the `_news` folder
 
 latest_posts:
-  enabled: true
+  enabled: false
   scrollable: true # adds a vertical scroll bar if there are more than 3 new posts items
   limit: 3 # leave blank to include all the blog posts
 
